<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingEnd="8dp"
    android:scrollbars="none"
    android:paddingStart="8dp"
    android:paddingTop="8dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_add_product">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvPhotos"
            android:layout_width="match_parent"
            android:layout_height="128dp">

        </android.support.v7.widget.RecyclerView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_white_stroke_grey"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etProductName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/hint_product_name"
                android:padding="16dp"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:src="@color/grey_300" />

            <EditText
                android:id="@+id/etProductDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="start"
                android:hint="@string/hint_product_description"
                android:minHeight="100dp"
                android:padding="16dp"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:src="@color/grey_300" />

            <EditText
                android:id="@+id/etPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/hint_product_price"
                android:inputType="number"
                android:padding="16dp"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:src="@color/grey_300" />

            <EditText
                android:id="@+id/etTags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/hint_product_tags"
                android:padding="16dp"
                android:textSize="14sp" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/cbFacebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:padding="16dp"
            android:text="@string/option_share_facebook"
            app:buttonTint="@color/colorAccent" />


        <CheckBox
            android:id="@+id/cbInstagram"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:padding="16dp"
            android:text="@string/option_share_instagram"
            app:buttonTint="@color/colorAccent" />

        <CheckBox
            android:id="@+id/cbTwitter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:padding="16dp"
            android:text="@string/option_share_twitter"
            app:buttonTint="@color/colorAccent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_white_stroke_grey"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/label_delivery_methods"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:text="@string/hint_shipping_method"
                android:textSize="10sp" />

            <CheckBox
                android:id="@+id/cbPickup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:padding="16dp"
                android:text="@string/option_shipping_pickup"
                app:buttonTint="@color/colorAccent" />

            <CheckBox
                android:id="@+id/cbDelivery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:padding="16dp"
                android:text="@string/option_shipping_delivery"
                app:buttonTint="@color/colorAccent" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/background_white_stroke_grey"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/label_payment_methods"
                android:padding="16dp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/cbOnlinePayment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:padding="16dp"
                android:text="@string/option_payment_online"
                app:buttonTint="@color/colorAccent" />

            <ProgressBar
                android:id="@+id/loadingPaymentCalc"
                style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true" />

            <TextView
                android:id="@+id/tvOnlinePaymentIncome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/placeholder_online_payment_value" />

            <Button
                android:id="@+id/btnOnlinePaymentHelp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey_300"
                android:elevation="0dp"
                android:text="@string/button_payment_how_it_works"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:textStyle="normal" />
        </LinearLayout>

        <Button
            android:id="@+id/btnPostProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:background="@drawable/shape_background_round_color_accent"
            android:text="@string/button_post_product_text"
            android:textColor="@color/button_post_product_text_color" />

    </LinearLayout>
</ScrollView>
