<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.buildone.dulado.ui.activity.product.ProductActivity"
    tools:showIn="@layout/activity_product">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="6dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="8dp">

            <ImageView
                android:id="@+id/ivPin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tint="@color/colorAccent"
                app:srcCompat="@drawable/ic_pin_store" />

            <TextView
                android:id="@+id/productAddess"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/ivPin"
                android:padding="6dp"
                android:text="@string/sample_address"
                android:textColor="@color/grey_400" />


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivSellerPhoto"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@color/light_gray" />


            <TextView
                android:id="@+id/tvSellerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/ivSellerPhoto"
                android:padding="6dp"
                android:text="@string/sample_seller_name"
                android:textColor="@color/grey_400" />
        </RelativeLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/vpPhotos"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@color/grey_300" />

        <TextView
            android:id="@+id/productName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingBottom="2dp"
            android:paddingTop="16dp"
            android:text="@string/app_name"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/productTags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center_horizontal"
            android:paddingBottom="2dp"
            android:text="@string/sample_product_tags"
            android:textColor="@color/grey_300"
            android:textSize="14sp" />


        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center_horizontal"
            android:paddingBottom="2dp"
            android:text="@string/sample_price"
            android:textColor="@color/product_price_text_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/productDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center_horizontal"
            android:maxLines="5"
            android:paddingBottom="2dp"
            android:text="@string/sample_description"
            android:textColor="@color/grey_400"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:src="@color/grey_100" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_credit_card" />

            <TextView
                android:id="@+id/paymentCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:gravity="center_horizontal"
                android:text="@string/label_payment_card_product"
                android:textColor="@color/grey_400"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_shield" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:gravity="center_horizontal"
                android:text="@string/label_secure_shopping"
                android:textColor="@color/green_600"
                android:textSize="16sp" />

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:src="@color/grey_100" />

        <Button
            android:id="@+id/btnChat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="Chat" />

        <Button
            android:id="@+id/btnStore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Store" />
    </LinearLayout>

</ScrollView>
