<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="270dp"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivProductPhoto"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@color/ligher_gray" />

    <LinearLayout
        android:id="@+id/container_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/ivProductPhoto"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/tvProductName"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:text="@string/sample_product_name"
            android:textColor="@color/product_name_text_color"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/tvProducTags"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:text="@string/sample_product_tags"
            android:textColor="@color/product_subtitle_text_color"
            android:textSize="12sp"
            android:textStyle="italic" />

    </LinearLayout>


    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/container_product"
        android:layout_toEndOf="@id/ivProductPhoto"
        android:gravity="start|center_vertical"
        android:paddingStart="8dp"
        android:text="@string/sample_price"
        android:textColor="@color/product_price_text_color"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="8dp"
        android:layout_toEndOf="@id/ivProductPhoto"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:visibility="gone">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivSellerPhoto"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:src="@color/light_gray" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/ivSellerPhoto"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvSellerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="8dp"
                android:text="@string/sample_seller_name"
                android:textColor="@color/product_seller_name"
                android:textSize="14sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="8dp">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@id/tvLocation"
                    app:srcCompat="@drawable/ic_location_pin_24dp" />

                <TextView
                    android:id="@+id/tvLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/tvSellerName"
                    android:text="@string/sample_location"
                    android:textColor="@color/product_location"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>