<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivProductPhoto"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:src="@color/light_gray" />

    <LinearLayout
        android:id="@+id/container_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvProductName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:text="@string/sample_product_name"
                android:textColor="@color/product_name_text_color"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/tvProducTags"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:text="@string/sample_product_tags"
                android:textColor="@color/product_subtitle_text_color"
                android:textSize="12sp"
                android:textStyle="italic" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end|center_vertical"
            android:text="@string/sample_price"
            android:textColor="@color/product_price_text_color"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>


    <RelativeLayout
        android:id="@+id/container_store"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@android:color/white"
        android:paddingEnd="8dp"
        android:paddingStart="8dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivSellerPhoto"
            android:layout_width="26dp"
            android:layout_centerVertical="true"
            android:layout_height="26dp"
            android:layout_alignBottom="@+id/floatingActionButton"
            android:layout_alignParentStart="true"
            android:src="@color/light_gray" />

        <TextView
            android:id="@+id/tvSellerName"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            android:layout_toRightOf="@id/ivSellerPhoto"
            android:text="@string/sample_seller_name"
            android:textColor="@color/product_seller_name"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/tvSellerName"
            android:text="@string/sample_location"
            android:textColor="@color/product_location"
            android:textSize="12sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/tvLocation"
            app:srcCompat="@drawable/ic_location_pin_24dp" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabChat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="2dp"
            android:clickable="true"
            android:soundEffectsEnabled="true"
            app:backgroundTint="@android:color/white"
            app:elevation="1dp"
            app:fabSize="mini"
            app:srcCompat="@drawable/ic_chat_edited" />
    </RelativeLayout>
</LinearLayout>